refact: returning a list instead of collection